julia_experiments/_cimgui.h

typedef char* va_list;
typedef unsigned int     size_t;
typedef char bool;
typedef unsigned int ImU32;
          
typedef ImU32 ImGuiID;
              
typedef int ImGuiCol;
       
typedef int ImGuiWindowFlags;
       
typedef int ImGuiSetCond;
           
typedef int ImGuiInputTextFlags;
    
typedef int ImGuiSelectableFlags;
   
struct ImGuiTextEditCallbackData;
   
typedef int (*ImGuiTextEditCallback)(struct ImGuiTextEditCallbackData *data);
struct ImVec2
{
    float x, y;
};
struct ImVec4
{
    float x, y, z, w;
};
struct ImGuiTextEditCallbackData
{
    ImGuiInputTextFlags EventFlag;      
    ImGuiInputTextFlags Flags;          
    void*               UserData;       
    bool                ReadOnly;           
    ImWchar             EventChar;          
    ImGuiKey            EventKey;       
    char*               Buf;            
    int                 BufSize;        
    bool                BufDirty;       
    int                 CursorPos;      
    int                 SelectionStart; 
    int                 SelectionEnd;       
    // void    DeleteChars(int pos, int bytes_count);
    // void    InsertChars(int pos, const char* text, const char* text_end = 0);
    // bool    HasSelection() const { return SelectionStart != SelectionEnd; }
};
typedef int ImGuiSetCond;
extern bool             igCombo3(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern bool             igDragIntRange2(const char* label, int* v_current_min, int* v_current_max, float v_speed/*=1.0f*/, int v_min /*= 0*/, int v_max /*= 0*/, const char* display_format/* = "%.0f"*/, const char* display_format_max/* = 0*/);
extern bool             igInputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiTextEditCallback callback, void* user_data);
extern bool             igInputTextMultiline(const char* label, char* buf, size_t buf_size, const struct ImVec2 size, ImGuiInputTextFlags flags, ImGuiTextEditCallback callback, void* user_data);
extern bool             igInputFloat(const char* label, float* v, float step, float step_fast, int decimal_precision, ImGuiInputTextFlags extra_flags);
extern bool             igInputFloat2(const char* label, float v[], int decimal_precision, ImGuiInputTextFlags extra_flags);
extern bool             igInputFloat3(const char* label, float v[], int decimal_precision, ImGuiInputTextFlags extra_flags);
extern bool             igInputFloat4(const char* label, float v[], int decimal_precision, ImGuiInputTextFlags extra_flags);
extern bool             igInputInt(const char* label, int* v, int step, int step_fast, ImGuiInputTextFlags extra_flags);
extern bool             igInputInt2(const char* label, int v[], ImGuiInputTextFlags extra_flags);
extern bool             igInputInt3(const char* label, int v[], ImGuiInputTextFlags extra_flags);
extern bool             igInputInt4(const char* label, int v[], ImGuiInputTextFlags extra_flags);
extern bool             igTreeNode(const char* str_label_id);
extern bool             igTreeNodeStrV(const char* str_id, const char* fmt, va_list args);
extern bool             igTreeNodePtrV(const void* ptr_id, const char* fmt, va_list args);
extern void             igTreePushStr(const char* str_id);
extern void             igTreePushPtr(const void* ptr_id);
extern void             igTreePop(void);
extern void             igSetNextTreeNodeOpened(bool opened, ImGuiSetCond cond);
extern bool             igSelectable(const char* label, bool selected, ImGuiSelectableFlags flags, const struct ImVec2 size);
extern bool             igSelectableEx(const char* label, bool* p_selected, ImGuiSelectableFlags flags, const struct ImVec2 size);
extern bool             igListBox(const char* label, int* current_item, const char** items, int items_count, int height_in_items);
extern bool             igListBox2(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern bool             igListBoxHeader(const char* label, const struct ImVec2 size);
extern bool             igListBoxHeader2(const char* label, int items_count, int height_in_items);
extern void             igListBoxFooter(void);
extern void             igValueBool(const char* prefix, bool b);
extern void             igValueInt(const char* prefix, int v);
extern void             igValueUInt(const char* prefix, unsigned int v);
extern void             igValueFloat(const char* prefix, float v, const char* float_format);
extern void             igValueColor(const char* prefix, const struct ImVec4 v);
extern void             igValueColor2(const char* prefix, unsigned int v);
extern void             igSetTooltipV(const char* fmt, va_list args);
extern void             igBeginTooltip(void);
extern void             igEndTooltip(void);
extern bool             igBeginMainMenuBar(void);
extern void             igEndMainMenuBar(void);
extern bool             igBeginMenuBar(void);
extern void             igEndMenuBar(void);
extern bool             igBeginMenu(const char* label, bool enabled);
extern void             igEndMenu(void);
extern bool             igMenuItem(const char* label, const char* shortcut, bool selected, bool enabled);
extern bool             igMenuItemPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled);
extern void             igOpenPopup(const char* str_id);
extern bool             igBeginPopup(const char* str_id);
extern bool             igBeginPopupModal(const char* name, bool* p_opened, ImGuiWindowFlags extra_flags);
extern bool             igBeginPopupContextItem(const char* str_id, int mouse_button);
extern bool             igBeginPopupContextWindow(bool also_over_items, const char* str_id, int mouse_button);
extern bool             igBeginPopupContextVoid(const char* str_id, int mouse_button);
extern void             igEndPopup(void);
extern void             igCloseCurrentPopup(void);
extern void             igLogToTTY(int max_depth);
extern void             igLogToFile(int max_depth, const char* filename);
extern void             igLogToClipboard(int max_depth);
extern void             igLogFinish(void);
extern void             igLogButtons(void);
extern bool             igIsItemHovered(void);
extern bool             igIsItemHoveredRect(void);
extern bool             igIsItemActive(void);
extern bool             igIsItemVisible(void);
extern bool             igIsAnyItemHovered(void);
extern bool             igIsAnyItemActive(void);
extern void             igGetItemRectMin(struct ImVec2* pOut);
extern void             igGetItemRectMax(struct ImVec2* pOut);
extern void             igGetItemRectSize(struct ImVec2* pOut);
extern bool             igIsWindowHovered(void);
extern bool             igIsWindowFocused(void);
extern bool             igIsRootWindowFocused(void);
extern bool             igIsRootWindowOrAnyChildFocused(void);
extern bool             igIsRectVisible(const struct ImVec2 item_size);
extern bool             igIsPosHoveringAnyWindow(const struct ImVec2 pos);
extern float            igGetTime(void);
extern int              igGetFrameCount(void);
extern const char*      igGetStyleColName(ImGuiCol idx);
extern void             igCalcItemRectClosestPoint(struct ImVec2* pOut, const struct ImVec2 pos, bool on_edge, float outward);
extern void             igCalcTextSize(struct ImVec2* pOut, const char* text, const char* text_end, bool hide_text_after_double_hash, float wrap_width);
extern void             igCalcListClipping(int items_count, float items_height, int* out_items_display_start, int* out_items_display_end);
extern bool             igBeginChildFrame(ImGuiID id, const struct ImVec2 size, ImGuiWindowFlags extra_flags);
extern void             igEndChildFrame(void);
extern void             igColorConvertU32ToFloat4(struct ImVec4* pOut, ImU32 in);
extern ImU32            igColorConvertFloat4ToU32(const struct ImVec4 in);