julia_experiments/cimgui.jl


function igDragIntRange2(label::Ptr{UInt8},v_current_min::Ptr{Cint},v_current_max::Ptr{Cint},v_speed::Cfloat,v_min::Cint,v_max::Cint,display_format::Ptr{UInt8},display_format_max::Ptr{UInt8})
    ccall((:igDragIntRange2,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Ptr{Cint},Cfloat,Cint,Cint,Ptr{UInt8},Ptr{UInt8}),label,v_current_min,v_current_max,v_speed,v_min,v_max,display_format,display_format_max)
end

function igInputText(label::Ptr{UInt8},buf::Ptr{UInt8},buf_size::Csize_t,flags::ImGuiInputTextFlags,callback::ImGuiTextEditCallback,user_data::Ptr{Void})
    ccall((:igInputText,cimgui),bool,(Ptr{UInt8},Ptr{UInt8},Csize_t,ImGuiInputTextFlags,ImGuiTextEditCallback,Ptr{Void}),label,buf,buf_size,flags,callback,user_data)
end

function igInputTextMultiline(label::Ptr{UInt8},buf::Ptr{UInt8},buf_size::Csize_t,size::ImVec2,flags::ImGuiInputTextFlags,callback::ImGuiTextEditCallback,user_data::Ptr{Void})
    ccall((:igInputTextMultiline,cimgui),bool,(Ptr{UInt8},Ptr{UInt8},Csize_t,ImVec2,ImGuiInputTextFlags,ImGuiTextEditCallback,Ptr{Void}),label,buf,buf_size,size,flags,callback,user_data)
end

function igInputFloat(label::Ptr{UInt8},v::Ptr{Cfloat},step::Cfloat,step_fast::Cfloat,decimal_precision::Cint,extra_flags::ImGuiInputTextFlags)
    ccall((:igInputFloat,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Cint,ImGuiInputTextFlags),label,v,step,step_fast,decimal_precision,extra_flags)
end

function igInputFloat2(label::Ptr{UInt8},v::Ptr{Cfloat},decimal_precision::Cint,extra_flags::ImGuiInputTextFlags)
    ccall((:igInputFloat2,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cint,ImGuiInputTextFlags),label,v,decimal_precision,extra_flags)
end

function igInputFloat3(label::Ptr{UInt8},v::Ptr{Cfloat},decimal_precision::Cint,extra_flags::ImGuiInputTextFlags)
    ccall((:igInputFloat3,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cint,ImGuiInputTextFlags),label,v,decimal_precision,extra_flags)
end

function igInputFloat4(label::Ptr{UInt8},v::Ptr{Cfloat},decimal_precision::Cint,extra_flags::ImGuiInputTextFlags)
    ccall((:igInputFloat4,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cint,ImGuiInputTextFlags),label,v,decimal_precision,extra_flags)
end

function igInputInt(label::Ptr{UInt8},v::Ptr{Cint},step::Cint,step_fast::Cint,extra_flags::ImGuiInputTextFlags)
    ccall((:igInputInt,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cint,Cint,ImGuiInputTextFlags),label,v,step,step_fast,extra_flags)
end

function igInputInt2(label::Ptr{UInt8},v::Ptr{Cint},extra_flags::ImGuiInputTextFlags)
    ccall((:igInputInt2,cimgui),bool,(Ptr{UInt8},Ptr{Cint},ImGuiInputTextFlags),label,v,extra_flags)
end

function igInputInt3(label::Ptr{UInt8},v::Ptr{Cint},extra_flags::ImGuiInputTextFlags)
    ccall((:igInputInt3,cimgui),bool,(Ptr{UInt8},Ptr{Cint},ImGuiInputTextFlags),label,v,extra_flags)
end

function igInputInt4(label::Ptr{UInt8},v::Ptr{Cint},extra_flags::ImGuiInputTextFlags)
    ccall((:igInputInt4,cimgui),bool,(Ptr{UInt8},Ptr{Cint},ImGuiInputTextFlags),label,v,extra_flags)
end

function igTreeNode(str_label_id::Ptr{UInt8})
    ccall((:igTreeNode,cimgui),bool,(Ptr{UInt8},),str_label_id)
end

function igTreeNodeStrV(str_id::Ptr{UInt8},fmt::Ptr{UInt8},args::va_list)
    ccall((:igTreeNodeStrV,cimgui),bool,(Ptr{UInt8},Ptr{UInt8},va_list),str_id,fmt,args)
end

function igTreeNodePtrV(ptr_id::Ptr{Void},fmt::Ptr{UInt8},args::va_list)
    ccall((:igTreeNodePtrV,cimgui),bool,(Ptr{Void},Ptr{UInt8},va_list),ptr_id,fmt,args)
end

function igTreePushStr(str_id::Ptr{UInt8})
    ccall((:igTreePushStr,cimgui),Void,(Ptr{UInt8},),str_id)
end

function igTreePushPtr(ptr_id::Ptr{Void})
    ccall((:igTreePushPtr,cimgui),Void,(Ptr{Void},),ptr_id)
end

function igTreePop()
    ccall((:igTreePop,cimgui),Void,())
end

function igSetNextTreeNodeOpened(opened::bool,cond::ImGuiSetCond)
    ccall((:igSetNextTreeNodeOpened,cimgui),Void,(bool,ImGuiSetCond),opened,cond)
end

function igSelectable(label::Ptr{UInt8},selected::bool,flags::ImGuiSelectableFlags,size::ImVec2)
    ccall((:igSelectable,cimgui),bool,(Ptr{UInt8},bool,ImGuiSelectableFlags,ImVec2),label,selected,flags,size)
end

function igSelectableEx(label::Ptr{UInt8},p_selected::Ptr{bool},flags::ImGuiSelectableFlags,size::ImVec2)
    ccall((:igSelectableEx,cimgui),bool,(Ptr{UInt8},Ptr{bool},ImGuiSelectableFlags,ImVec2),label,p_selected,flags,size)
end

function igListBox(label::Ptr{UInt8},current_item::Ptr{Cint},items::Ptr{Ptr{UInt8}},items_count::Cint,height_in_items::Cint)
    ccall((:igListBox,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Ptr{Ptr{UInt8}},Cint,Cint),label,current_item,items,items_count,height_in_items)
end

function igListBox2(label::Ptr{UInt8},current_item::Ptr{Cint},items_getter::Ptr{Void},data::Ptr{Void},items_count::Cint,height_in_items::Cint)
    ccall((:igListBox2,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Ptr{Void},Ptr{Void},Cint,Cint),label,current_item,items_getter,data,items_count,height_in_items)
end

function igListBoxHeader(label::Ptr{UInt8},size::ImVec2)
    ccall((:igListBoxHeader,cimgui),bool,(Ptr{UInt8},ImVec2),label,size)
end

function igListBoxHeader2(label::Ptr{UInt8},items_count::Cint,height_in_items::Cint)
    ccall((:igListBoxHeader2,cimgui),bool,(Ptr{UInt8},Cint,Cint),label,items_count,height_in_items)
end

function igListBoxFooter()
    ccall((:igListBoxFooter,cimgui),Void,())
end

function igValueBool(prefix::Ptr{UInt8},b::bool)
    ccall((:igValueBool,cimgui),Void,(Ptr{UInt8},bool),prefix,b)
end

function igValueInt(prefix::Ptr{UInt8},v::Cint)
    ccall((:igValueInt,cimgui),Void,(Ptr{UInt8},Cint),prefix,v)
end

function igValueUInt(prefix::Ptr{UInt8},v::UInt32)
    ccall((:igValueUInt,cimgui),Void,(Ptr{UInt8},UInt32),prefix,v)
end

function igValueFloat(prefix::Ptr{UInt8},v::Cfloat,float_format::Ptr{UInt8})
    ccall((:igValueFloat,cimgui),Void,(Ptr{UInt8},Cfloat,Ptr{UInt8}),prefix,v,float_format)
end

function igValueColor(prefix::Ptr{UInt8},v::ImVec4)
    ccall((:igValueColor,cimgui),Void,(Ptr{UInt8},ImVec4),prefix,v)
end

function igValueColor2(prefix::Ptr{UInt8},v::UInt32)
    ccall((:igValueColor2,cimgui),Void,(Ptr{UInt8},UInt32),prefix,v)
end

function igSetTooltipV(fmt::Ptr{UInt8},args::va_list)
    ccall((:igSetTooltipV,cimgui),Void,(Ptr{UInt8},va_list),fmt,args)
end

function igBeginTooltip()
    ccall((:igBeginTooltip,cimgui),Void,())
end

function igEndTooltip()
    ccall((:igEndTooltip,cimgui),Void,())
end

function igBeginMainMenuBar()
    ccall((:igBeginMainMenuBar,cimgui),bool,())
end

function igEndMainMenuBar()
    ccall((:igEndMainMenuBar,cimgui),Void,())
end

function igBeginMenuBar()
    ccall((:igBeginMenuBar,cimgui),bool,())
end

function igEndMenuBar()
    ccall((:igEndMenuBar,cimgui),Void,())
end

function igBeginMenu(label::Ptr{UInt8},enabled::bool)
    ccall((:igBeginMenu,cimgui),bool,(Ptr{UInt8},bool),label,enabled)
end

function igEndMenu()
    ccall((:igEndMenu,cimgui),Void,())
end

function igMenuItem(label::Ptr{UInt8},shortcut::Ptr{UInt8},selected::bool,enabled::bool)
    ccall((:igMenuItem,cimgui),bool,(Ptr{UInt8},Ptr{UInt8},bool,bool),label,shortcut,selected,enabled)
end

function igMenuItemPtr(label::Ptr{UInt8},shortcut::Ptr{UInt8},p_selected::Ptr{bool},enabled::bool)
    ccall((:igMenuItemPtr,cimgui),bool,(Ptr{UInt8},Ptr{UInt8},Ptr{bool},bool),label,shortcut,p_selected,enabled)
end

function igOpenPopup(str_id::Ptr{UInt8})
    ccall((:igOpenPopup,cimgui),Void,(Ptr{UInt8},),str_id)
end

function igBeginPopup(str_id::Ptr{UInt8})
    ccall((:igBeginPopup,cimgui),bool,(Ptr{UInt8},),str_id)
end

function igBeginPopupModal(name::Ptr{UInt8},p_opened::Ptr{bool},extra_flags::ImGuiWindowFlags)
    ccall((:igBeginPopupModal,cimgui),bool,(Ptr{UInt8},Ptr{bool},ImGuiWindowFlags),name,p_opened,extra_flags)
end

function igBeginPopupContextItem(str_id::Ptr{UInt8},mouse_button::Cint)
    ccall((:igBeginPopupContextItem,cimgui),bool,(Ptr{UInt8},Cint),str_id,mouse_button)
end

function igBeginPopupContextWindow(also_over_items::bool,str_id::Ptr{UInt8},mouse_button::Cint)
    ccall((:igBeginPopupContextWindow,cimgui),bool,(bool,Ptr{UInt8},Cint),also_over_items,str_id,mouse_button)
end

function igBeginPopupContextVoid(str_id::Ptr{UInt8},mouse_button::Cint)
    ccall((:igBeginPopupContextVoid,cimgui),bool,(Ptr{UInt8},Cint),str_id,mouse_button)
end

function igEndPopup()
    ccall((:igEndPopup,cimgui),Void,())
end

function igCloseCurrentPopup()
    ccall((:igCloseCurrentPopup,cimgui),Void,())
end

function igLogToTTY(max_depth::Cint)
    ccall((:igLogToTTY,cimgui),Void,(Cint,),max_depth)
end

function igLogToFile(max_depth::Cint,filename::Ptr{UInt8})
    ccall((:igLogToFile,cimgui),Void,(Cint,Ptr{UInt8}),max_depth,filename)
end

function igLogToClipboard(max_depth::Cint)
    ccall((:igLogToClipboard,cimgui),Void,(Cint,),max_depth)
end

function igLogFinish()
    ccall((:igLogFinish,cimgui),Void,())
end

function igLogButtons()
    ccall((:igLogButtons,cimgui),Void,())
end

function igIsItemHovered()
    ccall((:igIsItemHovered,cimgui),bool,())
end

function igIsItemHoveredRect()
    ccall((:igIsItemHoveredRect,cimgui),bool,())
end

function igIsItemActive()
    ccall((:igIsItemActive,cimgui),bool,())
end

function igIsItemVisible()
    ccall((:igIsItemVisible,cimgui),bool,())
end

function igIsAnyItemHovered()
    ccall((:igIsAnyItemHovered,cimgui),bool,())
end

function igIsAnyItemActive()
    ccall((:igIsAnyItemActive,cimgui),bool,())
end

function igGetItemRectMin(pOut::Ptr{ImVec2})
    ccall((:igGetItemRectMin,cimgui),Void,(Ptr{ImVec2},),pOut)
end

function igGetItemRectMax(pOut::Ptr{ImVec2})
    ccall((:igGetItemRectMax,cimgui),Void,(Ptr{ImVec2},),pOut)
end

function igGetItemRectSize(pOut::Ptr{ImVec2})
    ccall((:igGetItemRectSize,cimgui),Void,(Ptr{ImVec2},),pOut)
end

function igIsWindowHovered()
    ccall((:igIsWindowHovered,cimgui),bool,())
end

function igIsWindowFocused()
    ccall((:igIsWindowFocused,cimgui),bool,())
end

function igIsRootWindowFocused()
    ccall((:igIsRootWindowFocused,cimgui),bool,())
end

function igIsRootWindowOrAnyChildFocused()
    ccall((:igIsRootWindowOrAnyChildFocused,cimgui),bool,())
end

function igIsRectVisible(item_size::ImVec2)
    ccall((:igIsRectVisible,cimgui),bool,(ImVec2,),item_size)
end

function igIsPosHoveringAnyWindow(pos::ImVec2)
    ccall((:igIsPosHoveringAnyWindow,cimgui),bool,(ImVec2,),pos)
end

function igGetTime()
    ccall((:igGetTime,cimgui),Cfloat,())
end

function igGetFrameCount()
    ccall((:igGetFrameCount,cimgui),Cint,())
end

function igGetStyleColName(idx::ImGuiCol)
    ccall((:igGetStyleColName,cimgui),Ptr{UInt8},(ImGuiCol,),idx)
end

function igCalcItemRectClosestPoint(pOut::Ptr{ImVec2},pos::ImVec2,on_edge::bool,outward::Cfloat)
    ccall((:igCalcItemRectClosestPoint,cimgui),Void,(Ptr{ImVec2},ImVec2,bool,Cfloat),pOut,pos,on_edge,outward)
end

function igCalcTextSize(pOut::Ptr{ImVec2},text::Ptr{UInt8},text_end::Ptr{UInt8},hide_text_after_double_hash::bool,wrap_width::Cfloat)
    ccall((:igCalcTextSize,cimgui),Void,(Ptr{ImVec2},Ptr{UInt8},Ptr{UInt8},bool,Cfloat),pOut,text,text_end,hide_text_after_double_hash,wrap_width)
end

function igCalcListClipping(items_count::Cint,items_height::Cfloat,out_items_display_start::Ptr{Cint},out_items_display_end::Ptr{Cint})
    ccall((:igCalcListClipping,cimgui),Void,(Cint,Cfloat,Ptr{Cint},Ptr{Cint}),items_count,items_height,out_items_display_start,out_items_display_end)
end

function igBeginChildFrame(id::ImGuiID,size::ImVec2,extra_flags::ImGuiWindowFlags)
    ccall((:igBeginChildFrame,cimgui),bool,(ImGuiID,ImVec2,ImGuiWindowFlags),id,size,extra_flags)
end

function igEndChildFrame()
    ccall((:igEndChildFrame,cimgui),Void,())
end

function igColorConvertU32ToFloat4(pOut::Ptr{ImVec4},_in::ImU32)
    ccall((:igColorConvertU32ToFloat4,cimgui),Void,(Ptr{ImVec4},ImU32),pOut,_in)
end

function igColorConvertFloat4ToU32(_in::ImVec4)
    ccall((:igColorConvertFloat4ToU32,cimgui),ImU32,(ImVec4,),_in)
end
